--- a/www/mono/res/css/od.css
+++ b/www/mono/res/css/od.css
@@ -113,6 +113,7 @@ input#ButtonEncrypt.CryptTextArea {
 .DropDownList {
     height: 24pt;
     font-size: medium;
+    z-index: 360;
 }
 
 .ButtonTextBox {
